<resources>

    <string name="app_name">光明地产测试</string>
    <string name="net_error_tip">当前网络不可用，请检查你的网络设置。</string>
    <!-- 登录提示 -->
    <string name="login_hint_account">请输入帐号</string>
    <string name="login_hint_passward">请输入密码</string>
    <string name="login">登 录</string>
    <string name="regist">注册</string>
    <string name="remember_pwd_str">记住密码</string>
    <string name="auto_login_str">自动登录</string>
    <string name="message_invalid_username_password">用户名或密码错误</string>
    <string name="message_server_unavailable">无法连接到服务器</string>
    <string name="message_user_disabled">用户被禁用</string>
    <string name="message_user_expired">账户已过期</string>
    <string name="message_userip_no_access">IP不合法,已被禁用</string>
    <string name="unrecoverable_error">发生未知异常,连接失败</string>
    <string name="logout">注销</string>
    <!-- 主界面tab top -->
    <string name="tab_home">工作台</string>
    <string name="tab_chat">聊天</string>
    <string name="tab_colleague">同事圈</string>
    <string name="tab_setting">我的</string>
    <string name="top_contact">通讯录</string>
    <string name="top_chat">聊天</string>
    <string name="top_info">个人资料</string>
    <string name="tab_office">移动办公</string>
    <string name="contact_str">联系人</string>
    <!-- main page -->
    <string name="tab_check">流程审批</string>
    <string name="tab_report">我的考勤</string>
    <string name="tab_meetting">我的会议</string>
    <string name="tab_schedule">流程权责</string>
    <string name="tab_esp">生态系统平台</string>
    <string name="tab_timesheet">Timesheet 平台</string>
    <string name="tab_suggestion">我要建议</string>
    <string name="search">搜索</string>
    <string name="popwindow_pending">标为待办</string>
    <string name="popwindow_top">置顶聊天</string>
    <string name="cancle">取消</string>
    <string name="confirm">确定</string>
    <!-- im_activity_chat_base -->
    <string name="chat_send">发送</string>
    <string name="chat_voice">按住 说话</string>
    <string name="voice_cancle_send_move">手指上滑，取消发送</string>
    <string name="voice_cancle_send_up">松开手指，取消发送</string>
    <string name="voice_too_short">说话时间太短</string>
    <string name="chat_for_clean">清空聊天记录</string>
    <string name="chat_for_search">查找聊天内容</string>
    <string name="group_chat_del_exit">删除并退出</string>
    <string name="chat_menu_pic">照片</string>
    <string name="chat_menu_camera">拍照</string>
    <string name="chat_menu_mail">邮件</string>
    <string name="chat_menu_location">定位</string>
    <string name="chat_menu_vedio">视频</string>
    <!-- list -->
    <string name="list_back_more">更多</string>
    <string name="list_back_del">删除</string>
    <string name="contact_orgunition">组织架构</string>
    <string name="contact_group">我的群组</string>
    <string name="contact_public">公众号</string>
    <string name="contact_attention">我的关注</string>
    <!-- user -->
    <string name="user_empid">员工号</string>
    <string name="user_city">城市</string>
    <string name="user_objname">部门</string>
    <string name="user_jobtitle">职级</string>
    <string name="user_jobtitle_2">工号</string>
    <string name="user_jobtitle_3">职位</string>
    <string name="user_phone">手机</string>
    <string name="user_office_phone">座机</string>
    <string name="user_mail">邮箱</string>
    <string name="user_send_msg_btn">发消息</string>
    <string name="user_setting_info">个人信息设置</string>
    <string name="user_setting_info_password">修改密码</string>
    <string name="user_setting_info_old_password">原密码</string>
    <string name="user_setting_info_new_password">新密码</string>
    <string name="user_setting_info_confirm_password">确认密码</string>
    <string name="user_setting_info_detail">(密码修改，手机绑定)</string>
    <string name="user_setting_yinsi">隐私设置</string>
    <string name="user_setting_yanzheng">验证开关配置入口</string>
    <string name="user_setting_other">其他设置</string>
    <string name="user_setting_clearcache">清除缓存</string>
    <string name="user_setting_help">帮助</string>
    <string name="user_setting_language">语言设置</string>
    <string name="user_setting_update">检查更新</string>
    <string name="user_setting_update_orgunition">更新组织架构</string>
    <string name="take_txt">文字</string>
    <string name="photo_camera">拍照</string>
    <string name="photo_picker">从手机相册选择</string>
    <string name="group_create_cn">中文</string>
    <string name="group_create_en">英文</string>
    <string name="group_create_attention">我的关注</string>
    <string name="user_zone_count">发表说说</string>
    <string name="user_attention_count">我关注的</string>
    <string name="user_be_attention_count">关注我的</string>

    <!-- 默认的viewpageIndicator
    <bool name="default_circle_indicator_centered">true</bool>
    <color name="default_circle_indicator_fill_color">#ff298ecb</color>
    <color name="default_circle_indicator_page_color">#ff777777</color>
    <integer name="default_circle_indicator_orientation">0</integer>
    <dimen name="default_circle_indicator_radius">3dp</dimen>
    <bool name="default_circle_indicator_snap">false</bool>
    <color name="default_circle_indicator_stroke_color">#FFDDDDDD</color>
    <dimen name="default_circle_indicator_stroke_width">1dp</dimen>
     -->
    <!-- 上拉下拉 -->
    <!-- <string name="xlistview_header_hint_normal">下拉刷新</string> -->
    <string name="xlistview_header_hint_normal">下拉加载</string>
    <string name="xlistview_header_hint_ready">松开查看</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新中&#8230;</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中&#8230;</string>
    <!-- 修改组名 -->
    <string name="no_name">未命名</string>
    <string name="room_name">群名称</string>
    <string name="scan_text">对准二维码到框内即可自动扫描</string>
    <!-- Gesture code starting -->
    <string name="user_setting_gesture">手势</string>
    <string name="gesture_code">手势密码</string>
    <string name="setup_gesture_code">设置手势密码</string>
    <string name="setup_gesture_pattern">请绘制解锁图案</string>
    <string name="setup_gesture_pattern_again">请再次绘制解锁图案</string>
    <string name="setup_gesture_pattern_4_limit">至少连接4个点, 请重新输入</string>
    <string name="setup_gesture_pattern_again_error">与上一次绘制不一致，请重新绘制</string>
    <string name="modify_gesture_code">修改手势密码</string>
    <string name="forget_gesture_code">忘记手势密码</string>
    <string name="use_other_account_login">用其他账号登录</string>
    <string name="reset_gesture_code">重新设置手势密码</string>
    <string name="gesture_error_count">密码错误，还可以输入%1$d次</string>
    <string name="setup_input_old_gesture_code">请输入原手势密码</string>
    <string name="no_email_address_for_org">未选中联系人或选中的联系人无邮件地址</string>

    <string name="send_email">发起邮件</string>
    <string name="scan">扫一扫</string>
    <string name="scan_error">扫描出错啦！</string>
    <string name="download_app">下载我</string>
    <string name="sign_error">签到失败</string>
    <string name="get_messages_error">获取信息失败！</string>
    <string name="loading">正在加载&#8230;</string>
    <string name="username_and_password_can_not_null">用户名密码不能为空</string>
    <string name="clicked_again_for_exit">再按一次退出程序</string>
    <string name="config_servers">配置服务器</string>
    <string name="participant_activities">我参与的活动</string>
    <string name="lucky">中</string>
    <string name="unlucky">未中</string>
    <string name="phone_num">手机号</string>
    <string name="lucky_name">中奖者姓名</string>
    <string name="from">来自</string>
    <string name="lucky_draw">摇奖</string>
    <string name="reset">重置</string>
    <string name="my_attention">我关注的</string>
    <string name="attention_me">关注我的</string>
    <string name="finish">完成</string>

    <string name="password_rule">密码只能包含数字，字母，下划线，位数在6&#8211;20位之间</string>
    <string name="password_different">新密码两次输入不一致！</string>
    <string name="password_error">原密码不正确！</string>
    <string name="password_modify_success">密码修改成功！</string>
    <string name="password_modify_error">密码修改失败！</string>

    <string name="clearing">正在清除&#8230;</string>
    <string name="after_unband">解除绑定后，此设备将被默认加入黑名单，您将不能用此设备登录APP，确认解除绑定吗？</string>
    <string name="waiting">请稍后&#8230;</string>
    <string name="unband_succeed">解绑成功！</string>
    <string name="unband_failed">解绑失败！</string>
    <string name="upload_avatar_error">头像上传失败！</string>
    <string name="avatar_name_error">头像名称更新失败！</string>
    <string name="clear_succeed">清除成功</string>
    <string name="share_succeed">分享成功！</string>
    <string name="share_failed">分享失败！</string>
    <string name="picture_upload_failed">图片上传失败！</string>
    <string name="commit">提交</string>
    <string name="please_input_your_suggestion">请输入您的建议</string>
    <string name="scan_result">扫描结果</string>
    <string name="movit_bpm">盟拓BPM</string>
    <string name="save_succeed">保存成功</string>
    <string name="save_failed">保存失败</string>
    <string name="saving">正在保存&#8230;</string>
    <string name="config_worktable">自定义工作台</string>

    <string name="useful">可用的应用</string>
    <string name="unUseful">停用中的应用</string>

    <string name="create">创建</string>
    <string name="please_input_reason">请填写事由！</string>
    <string name="can_not_more_than_fifty">最多输入50个字！</string>
    <string name="please_upload_one_pic_at_least">请至少上传1张照片！</string>
    <string name="upload_innear_info">正在上传考勤信息&#8230;</string>

    <string name="you_take_picture_num">您拍照的第</string>
    <string name="picture_error">图片有误!</string>

    <string name="upload_succeed">上传成功！</string>
    <string name="upload_failed">上传失败！</string>
    <string name="picture_failed">张图片上传失败！</string>
    <string name="meeting">我的会议</string>

    <string name="str_chinese">简体中文</string>
    <string name="str_english">English</string>
    <string name="str_change_language">如果您切换语言，会退出APP，需要您重新登录</string>



    <string name="tv_visitor">游客登录</string>
    <string name="tv_server">选择服务器</string>
    <string name="activities_list_error">活动列表查询出错</string>
    <string name="awards_list_error">奖项列表查询出错</string>
    <string name="winner_list_error">中奖名单查询出错</string>
    <string name="lucky_draw_people">摇奖人</string>
    <string name="verify_gesture_code">验证手势密码</string>
    <string name="gesture_code_invalid">手势密码已失效，需要使用账号&#038;密码登陆</string>
    <string name="forget_gesture_code_invalid">忘记手势密码，需要使用账号&#038;密码登陆</string>
    <string name="get_group_message">正在获取群组信息&#8230;</string>
    <string name="get_group_message_error">群组信息获取失败！</string>
    <string name="contacts_is_self">联系人是自己</string>
    <string name="user_is_not_exist">用户不存在!</string>
    <string name="register_success">注册成功</string>
    <string name="recommendation_describes">若你在系统使用过程中有任何问题，请在此提交，尽量加入图片以便快速处理。</string>

    <string name="chat_send_fail">发送失败</string>
    <string name="chat_send_success">已发送</string>

    <!-- 行政流程-->
    <string name="not_do">待办(%1$s)</string>
    <string name="done">已办(%1$s)</string>
    <string name="process_time">发起时间:%1$s</string>
    <string name="process_no_commission">尚未开通ERP权限</string>
    <string name="process_search">搜索</string>
    <!-- End -->

    <!-- 引导页-->
    <string name="frame_1_2">通讯录</string>
    <string name="frame_2_2">我的邮件</string>
    <string name="frame_3_2">BPM</string>
    <string name="frame_4_2">个人日历</string>
    <string name="frame_5_2">新闻公告</string>

    <string name="frame_1_3">层级展示公司组织架构人员信息</string>
    <string name="frame_2_3">无需用户配置即可轻松实现手机APP收发邮件</string>
    <string name="frame_3_3">手机上的流程审批，让流程更简单</string>
    <string name="frame_4_3">无缝同步Outlook日历，随时查看行程状态</string>
    <string name="frame_5_3">公司新闻公告，一‘手’阅读</string>

    <string name="frame_1_4">轻松找人，一键拨打电话、发邮件</string>

</resources>