<?xml version="1.0" encoding="utf-8"?>
<com.movit.platform.framework.widget.CusRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg">

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/login_bottom"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_5"
        android:fadingEdge="none"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_60"
                android:src="@drawable/im_login_pic" />

            <TextView
                android:id="@+id/company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:visibility="gone"
                android:textSize="@dimen/sp_22" />

            <LinearLayout
                android:layout_width="@dimen/dp_250"
                android:layout_height="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_60"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/dp_24"
                    android:layout_height="@dimen/dp_24"
                    android:layout_marginLeft="@dimen/dp_6"
                    android:src="@drawable/im_login_ico_user" />

                <EditText
                    android:id="@+id/account_input"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_40"
                    android:background="@color/trans_color"
                    android:focusable="true"
                    android:hint="@string/login_hint_account"
                    android:maxLength="30"
                    android:paddingLeft="@dimen/dp_17"
                    android:singleLine="true"
                    android:textColor="#a6a6a6"
                    android:textColorHint="#a6a6a6"
                    android:textSize="@dimen/sp_16" />
            </LinearLayout>

            <View
                android:layout_width="@dimen/dp_250"
                android:layout_height="@dimen/dp_1"
                android:background="@color/top_bg_color" />

            <LinearLayout
                android:layout_width="@dimen/dp_250"
                android:layout_height="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_15"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/dp_24"
                    android:layout_height="@dimen/dp_24"
                    android:layout_marginLeft="@dimen/dp_6"
                    android:src="@drawable/im_login_ico_lock" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_40"
                    android:background="@color/trans_color"
                    android:hint="@string/login_hint_passward"
                    android:inputType="textPassword"
                    android:maxLength="25"
                    android:paddingLeft="@dimen/dp_17"
                    android:singleLine="true"
                    android:textColor="#a6a6a6"
                    android:textColorHint="#a6a6a6"
                    android:textSize="@dimen/sp_16" />
            </LinearLayout>

            <View
                android:layout_width="@dimen/dp_250"
                android:layout_height="@dimen/dp_1"
                android:background="@color/top_bg_color" />

            <RelativeLayout
                android:layout_width="@dimen/dp_250"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/remenber_pwd"
                        android:layout_width="@dimen/dp_13"
                        android:layout_height="@dimen/dp_13"
                        android:background="@drawable/login_checkbox_selector"
                        android:button="@null" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_10"
                        android:text="@string/remember_pwd_str"
                        android:textColor="#a6a6a6"
                        android:textSize="@dimen/sp_13" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/auto_login"
                        android:layout_width="@dimen/dp_13"
                        android:layout_height="@dimen/dp_13"
                        android:layout_marginLeft="@dimen/dp_20"
                        android:background="@drawable/login_checkbox_selector"
                        android:button="@null" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_10"
                        android:text="@string/auto_login_str"
                        android:textColor="#a6a6a6"
                        android:textSize="@dimen/sp_13" />

                    <TextView
                        android:id="@+id/regist"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/regist"
                        android:textColor="#a6a6a6"
                        android:textSize="@dimen/sp_14" />
                </LinearLayout>
            </RelativeLayout>

            <Button
                android:id="@+id/login"
                android:layout_width="@dimen/dp_250"
                android:layout_height="@dimen/dp_44"
                android:layout_marginBottom="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_30"
                android:background="@color/red"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_18" />

            <LinearLayout
                android:id="@+id/ll_setting"
                android:layout_width="@dimen/dp_250"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tv_visitor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dp_5"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_blue"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/tv_visitor" />

                <TextView
                    android:id="@+id/tv_server"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_blue"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/tv_server" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/login_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp_10">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/dp_90"
            android:layout_height="@dimen/dp_22"
            android:layout_centerInParent="true"
            android:scaleType="fitXY"
            android:src="@drawable/im_login_logo"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="All rights by Bright ©copyright"
            android:textColor="#a6a6a6"
            android:textSize="@dimen/sp_10"
            android:visibility="visible" />

        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_10"
            android:textColor="#a6a6a6"
            android:textSize="@dimen/sp_12" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/login_input_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:src="@drawable/ico_serversetting"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/iv_server"
        android:layout_width="@dimen/dp_50"
        android:layout_height="@dimen/dp_50"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/dp_5"
        android:scaleType="centerInside"
        android:src="@drawable/ico_server_1"
        android:visibility="gone" />

</com.movit.platform.framework.widget.CusRelativeLayout>